# mac-code

./: .gitignore  AGENTS.md  README.md  agent.py  mlx_server.py
.github/workflows/: build-sniper-worker.yml
research/expert-sniper/cli-agent/: pyproject.toml  setup.cfg
research/expert-sniper/cli-agent/src/mlx_expert_sniper/: __init__.py  calibrate.py  cli.py  coactivation.py  download.py  engine.py  engine_next.py  generate.py  preprocess.py
research/expert-sniper/cli-agent/src/mlx_expert_sniper/models/: gemma4.py
research/expert-sniper/distributed/: README.md
research/expert-sniper/distributed/mac_tensor/: agent.py  bench.py  cli.py  server.py  vision_engine.py
research/expert-sniper/distributed/mac_tensor/static/: chat.html
research/expert-sniper/runpod-worker/: Dockerfile
research/expert-sniper/sniper-router/: SCALING.md  spec_router.py
research/flash-streaming/: batched_moe.py  diagnose_expert.py  diagnose_generate.py  expert_io.py  flash_moe.py  pod_exec.py  sniper_122b.py  sniper_122b_v2.py  sniper_122b_v3.py  split_mlx_model.py
research/gemma/mlx-gemma4/src/mlx_gemma4/: generate.py  model.py
research/tiny-bit-terminal/: README.md
