[metadata]
name = mlx-expert-sniper
version = 0.2.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    mlx>=0.22.0
    mlx-lm>=0.22.0
    transformers>=4.40.0
    numpy
    huggingface-hub

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mlx-sniper = mlx_expert_sniper.cli:main
